# Rauf-Timur

./: CMakeLists.txt  README.md  kinect.pro  kinect2io.hpp  main.cpp  main5.cpp  planeextractor.hpp  shapedetection.cpp
OCR2/OCR2/: main.cpp  shapeDetection.cpp
kinect/: buffer.cpp  kinect.pro  kinect2io.hpp  kinect2io.hpp.autosave  main.cpp  planeextractor.cpp
